# cwnote

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: annotate.rs  aws_client.rs  cli.rs  main.rs
