[package]
name = "cwnote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cvnote"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
aws-config = "1"
aws-sdk-cloudwatch = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1"
