[package]
name = "cwnote"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[[bin]]
name = "cwnote"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
aws-config = "1"
aws-sdk-cloudwatch = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3"
